# cph-zed

./: .gitmodules  Cargo.toml  LICENSE  README.md  extension.toml
extensions/: .gitmodules  extensions.toml
src/: lib.rs
src/commands/: test.rs
src/utils/: companion.rs  runner.rs
